@@ -26,8 +26,8 @@ foo <- mxMatrix('Full', 1, 1, name = 'foo')
 bar <- mxMatrix('Full', 10, 1, name = 'bar')
 model <- mxModel(model, data, chol, expCov, expMean, objective, foo, bar)
 omxCheckIdentical(mxEval(objective + foo, model, TRUE), matrix(as.numeric(NA), 1, 1))
-omxCheckError(mxEval(objective + bar, model, TRUE), "Trying to evaluate 'objective + bar' in model 'model' generated the error message: non-conformable arrays")
+omxCheckError(mxEval(objective + bar, model, TRUE), "The following error occurred while evaluating the expression 'model.objective + model.bar' in model 'model' : non-conformable arrays")
 objective <- mxFIMLObjective("expCov", "expMean", vector = TRUE)
 model <- mxModel(model, objective)
-omxCheckError(mxEval(objective + foo, model, TRUE), "Trying to evaluate 'objective + foo' in model 'model' generated the error message: non-conformable arrays")
+omxCheckError(mxEval(objective + foo, model, TRUE), "The following error occurred while evaluating the expression 'model.objective + model.foo' in model 'model' : non-conformable arrays")
 omxCheckIdentical(mxEval(objective + bar, model, TRUE), matrix(as.numeric(NA), 10, 1))
